# core

./: .gitignore  pyproject.toml  requirements.cpu.txt  requirements.cuda.txt  requirements.rocm.txt
latexmt_core/: get_translator.py  markup_string.py
latexmt_core/alignment/: __init__.py  wordsplit.py
latexmt_core/alignment/awesome_align/: __init__.py
latexmt_core/context_logger/: __init__.py
latexmt_core/document_processor/: __init__.py  helpers.py
latexmt_core/glossary/: __init__.py  align.py  srcrepl.py
latexmt_core/parsing/: latex_context.py  macro_parsers.py  parsplit.py  repack.py  special_commands.py  text_item.py  to_text.py  unpack.py
latexmt_core/translation/: __init__.py
latexmt_core/translation/api_custom/: __init__.py
latexmt_core/translation/api_deepl/: __init__.py
latexmt_core/translation/api_openai/: __init__.py
latexmt_core/translation/api_opus/: __init__.py
latexmt_core/translation/null/: __init__.py
latexmt_core/translation/opus/: __init__.py  model.py
latexmt_core/unicode_helpers/: __init__.py  replacements.py
