[project]
name = "latexmt-core"
version = "1.0.2"
authors = [
  { name="Calvin Hoy", email="calvin.hoy@screee.ee" },
]
description = "Core functionality for LaTeXMT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
]
dependencies = [
  "numpy",
  "pylatexenc==3.0a30",
  "torch==2.6.0",
  "transformers[torch]",
  "tokenizers",
  "sentencepiece",
  "sacremoses",
]

[project.optional-dependencies]
opus-huggingface = ["requests"]
deepl = ["deepl"]
openai = ["openai"]

[project.urls]
Homepage = "https://github.com/latexmt/core"
Issues = "https://github.com/latexmt/core/issues"
